src/style.css
/* ... */
@keyframes pop-in {
  from {
    transform: scale(0.9);
    opacity: 0;
  }

  to {
    transform: scale(1);
    opacity: 1;
  }
}

/* Codemirror */

.CodeMirror {
  width: 100%;
  height: 100%;
  font-size: var(--editor-font-size, 16px);
}

/* TODO: Check why? */

.layout-2 .is-minimized .Codemirror,
.layout-5 .is-minimized .Codemirror {
  height: calc(100%);
}

.CodeMirror pre {
  font-variant-ligatures: contextual;
}

.cm-s-monokai .CodeMirror-linenumber {
  color: rgba(255, 255, 255, 0.2);
}

.cm-s-monokai.CodeMirror,
.cm-s-monokai .CodeMirror-gutters {
  background: var(red);
}

.cm-s-monokai .CodeMirror-guttermarker-subtle {
  opacity: 0.4;
}

.cm-s-monokai .CodeMirror-activeline-background,
.cm-s-monokai .CodeMirror-activeline-gutter {
  background: rgba(0, 0, 0, 0.1) !important;
}

.CodeMirror-guttermarker-subtle {
  /*visibility: hidden !important;*/
}

.CodeMirror-gutter-wrapper:hover .CodeMirror-guttermarker-subtle {
  /*visibility: visible;*/
}

.CodeMirror-hints {
  font-size: var(--editor-font-size, 16px);
  border: 0;
  background: #1e1e2c;
}

.CodeMirror-hint {
  color: #bbb;
  padding: 2px 4px;
}

li.CodeMirror-hint-active {
  background: #5b429d;
  /*color: white;*/
}

#demo-frame {
  border: 0;
  width: 100%;
  height: calc(100%);
  /*height: calc(100% - 29px); height reserved for console*/
  /*  minus minimized console height */
  background-image: radial-gradient(circle, #4b5563 1px, transparent 1px);
  background-size: 20px 20px;
  background-color: #1f2937;
}

/* When demo frame is in detached window */

body > #demo-frame {
  height: 100%;
  /* Because console is no more here */
}

.embed-header,
.footer {
  padding: 0.5rem 1rem;
  background-color: rgb(18, 19, 27);
  border-top: 1px solid rgba(255, 255, 255, 0.14);
}

.footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  /* Because .console is 6 */
  z-index: 6;
}

.main-header {
  background-color: rgb(18, 19, 27);
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  border: 0;
  border-bottom: 1px solid rgba(255, 255, 255, 0.14);
}

.embed-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: #333;
  background-color: #fff;
  border-bottom: 1px solid #dadde1;
}

.embed-header__left {
  display: flex;
  align-items: center;
}

.embed-header__external {
  opacity: 0.6;
}
.embed-header__external:hover {
  opacity: 1;
}
.embed-header__external:focus {
  outline: none;
}

.btn--dark > svg {
  fill: #9297b3;
  margin-right: 4px;
}

.main-header__btn-wrap > .is-marked > svg {
  fill: crimson;
}

.btn--dark:hover {
  border-color: rgba(146, 151, 179, 0.5);
}

.main-header__btn-wrap > .is-loading {
  pointer-events: none;
  opacity: 0.4;
}

.main-header__avatar-img,
.profile-modal__avatar-img {
  border-radius: 50%;
}

.main-header .title {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.main-header .title > span {
  display: inline-block;
}

.header-logo {
  width: 2rem;
  height: 2rem;

  margin-right: 1rem;
}

.header-logo img {
  width: 100%;
}

.title {
  color: var(--color-text);
}

.title .material-symbols-outlined {
  margin-left: 0.2rem;
  font-size: 1rem;
}

.icon-button {
  display: flex;
  align-items: center;
  gap: 0.1rem;

  appearance: none;
  font-size: 1rem;
  text-shadow: none;
  border-radius: var(--border-radius);
  border: 3px solid transparent;
  background: #444857;
  color: white;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
  text-decoration: none;
  text-align: center;
  font-weight: normal;
}

.logo {
  display: inline-block;
  height: 18px;
  width: 18px;
  margin-right: 5px;
  background: url(/icon-16.png) no-repeat;
  vertical-align: middle;
  -webkit-filter: grayscale(0.9);
  filter: grayscale(0.9);
  transition: 0.4s ease;
  opacity: 0.3;
  will-change: opacity, filter;
}

.logo.small {
  height: 20px;
  width: 20px;
  margin-right: 0px;
  background: url(/icon-16.png) 0px 0px no-repeat;
  -webkit-filter: grayscale(0);
  filter: grayscale(0);
  opacity: 1;
}

.logo.small.gray {
  -webkit-filter: grayscale(0.9);
  filter: grayscale(0.9);
}

.footer:hover .logo {
  -webkit-filter: grayscale(0);
  filter: grayscale(0);
  opacity: 1;
}

.footer__right {
  font-size: 0;
  line-height: 0;
}

.footer__separator {
  display: inline-block;
  height: 24px;
  margin: 0 10px 0 20px;
  border-left: 1px solid rgba(255, 255, 255, 0.2);
}

.mode-btn {
  background: transparent;
  border: 0;
  padding: 0;
  margin-left: 10px;
  display: inline-block;
}

.footer__link:first-of-type {
  margin-left: 5px;
}

.footer__link {
  background: transparent;
  border: 0;
  padding: 0;
  margin-right: 0.5rem;
  position: relative;
  top: 2px;
  color: var(--link-color);
  font-weight: lighter;
}

.footer a > svg,
.footer button > svg {
  transition: 0.3s ease;
  fill: rgba(255, 255, 255, 0.35);
}

.footer a:hover svg,
.footer button:hover svg {
  fill: rgba(255, 255, 255, 0.6);
}

.mode-btn svg {
  width: 24px;
  height: 24px;
}

.mode-btn.selected svg {
  fill: rgba(255, 255, 255, 0.6);
}

.gutter {
  background: rgba(255, 255, 255, 0.05);
  flex-shrink: 0;
}

.gutter-horizontal {
  cursor: ew-resize;
}

.gutter-vertical {
  cursor: ns-resize;
}

.item-title-input {
  padding: 3px 5px;
  margin-right: 10px;
  background: var(--color-bg);
  color: white;
}

.search-input {
  /* background: rgba(255, 255, 255, 0.1); */
  /* padding: 10px 20px; */
  /* border: 0; */
  width: 100%;
  font-size: 16px;
  /* color: white; */
  /* border-radius: 4px; */
}

.modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  overflow-y: auto;
  align-items: center;
  display: flex;
  align-items: baseline;
  justify-content: center;
  z-index: 2000;
  visibility: hidden;
  /* background-color: rgba(102, 51, 153, 0.7); */
  /* background-color: rgba(0, 0, 0, 0.7); */
  /* To prevent scroll repaint inside modal */
  will-change: transform;
}
/* ... */

